--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ header, section {
         color: black;
     }
 
-/* Bouton "Créer une palette de couleur" */
+/* Bouton "Créer palette couleur" */
 
     button{
         border: none;
@@ -203,7 +203,7 @@ header, section {
         border: solid black 3px;
         height : 20px;
         width : 20px;
-        background-color: rgb(224, 0, 0);
+        background-color: rgb(0, 0, 0);
     }
 
 /* animation roue qui tourne (Se trouve dans @keyframes spin) */
